# skills-flatagents

./: .gitignore  MACHINES.md  PKM_PROTOTYPE_PLAN.md  README.md  SKILL_WRITING_GUIDE.md  SOCRATIC_TEACHER_ARCH.md  TYPED_HOOKS.md  codebase_explorer.txt  install-manifest.yml  install.sh  machine_manager.db  pyproject.toml  tests.sh  uninstall.sh
browser-viewer/: run.sh  scraped-links.md
codebase-explorer/: SKILL.md  profiles.yml  run.sh
codebase-ripper/: SKILL.md  machine.yml  profiles.yml  run.sh
codebase_explorer/: README.md  SKILL.md  machine.yml  profiles.yml
codebase_ripper/: ADDL_COMMAND_PRIORITIZATION.md  README.md  SKILL.md  STDOUT_HYGIENE_FIXES.md  machine.yml  profiles.yml  run.sh  test_git_security.py
coding-agent/: SKILL.md  machine.yml  run.sh
coding-tools/: SKILL.md
coding_agent/: CLAUDE_CODER_AGENT_IMPROVEMENTS.md  SKILL.md  machine.yml  profiles.yml
create-gif/: SKILL.md
docs/: CLAUDE_SKILLS_GUIDE.md  LLM_DEFAULTS_PLAN.md  REPO_SPOTLIGHT_PLAN.md  SKILLS_GUIDE.md  TEST_WRITER_OPTIMIZATION_PLAN.md
dynamic-agent/: SKILL.md
dynamic_agent/: README.md  SKILL.md  machine.yml  profiles.yml  run.sh
file_writer/: machine.yml
flatmachine-manager/: HANDOFF-20260322.md  PLAN.md  SKILL.md  machine_manager_schema.sqlite  run.sh  schema.sql  strategy-20260322T1445-agentharness-adoption.md  todos.md
flatmachine-manager/python/: README.md  pyproject.toml  run.sh
flatmachine-manager/python/src/flatmachine_manager/: __init__.py  cli.py  cli_hooks.py  cli_tools.py  cull.py  demo.py  doctor.py  git_hooks.py  hooks.py  hooks_registry.py  main.py  registry.py  templates.py  tool_registry.py  tools.py  validation.py
json_extractor/: __init__.py  hooks.py  machine.yml  profiles.yml
learning_record/: .socratic_sessions.jsonl  socratic_session_distributed_systems_20260119_160937.md  socratic_session_distributed_systems_20260119_162112.md  socratic_session_distributed_systems_20260119_162329.md  socratic_session_distributed_systems_20260119_162624.md  socratic_session_distributed_systems_20260119_162832.md  socratic_session_distributed_systems_20260119_162945.md  socratic_session_shoe_tying_20260119_163226.md  socratic_session_shoe_tying_20260119_165657.md
openai-deep-research-citation-fixer/: README.md  SKILL.md  fix_openai_deep_research_citations.py  run.sh
quick-report/: README.md  SKILL.md  serve.sh  template.html
repo-map/: README.md  SKILL.md  run.sh
repo_map/: SKILL.md  machine.yml  pyproject.toml
repo_map/src/aider/: dump.py  repomap.py  special.py  waiting.py
repo_map/src/aider/queries/tree-sitter-language-pack/: README.md  arduino-tags.scm  chatito-tags.scm  java-tags.scm  javascript-tags.scm  lua-tags.scm  ocaml_interface-tags.scm  pony-tags.scm  properties-tags.scm  python-tags.scm  ruby-tags.scm  solidity-tags.scm  swift-tags.scm
repo_map/src/aider/queries/tree-sitter-languages/: c-tags.scm  c_sharp-tags.scm  elisp-tags.scm  elm-tags.scm  fortran-tags.scm  haskell-tags.scm  julia-tags.scm  ocaml-tags.scm  python-tags.scm  rust-tags.scm
repo_map/src/repo_map/: hooks.py
scripts/: lint-spec-versions.sh
shell_analyzer/: SKILL.md  install.sh  machine.yml  profiles.yml  pyproject.toml  run.sh  uninstall.sh
shell_analyzer/agents/: analyzer.yml
shell_analyzer/config/: analyzer.yml
shell_analyzer/src/shell_analyzer/: __init__.py  hooks.py  main.py
test_writer/: SKILL.md  install.sh  machine.yml  profiles.yml  pyproject.toml  run.sh  uninstall.sh
test_writer/agents/: analyzer.yml  checker.yml  fixer.yml  writer.yml
test_writer/config/: analyzer.yml  writer.yml
test_writer/example/: calculator.py
test_writer/example/tests/: test_calculator.py
test_writer/src/test_writer/: coverage.py  hooks.py  main.py
(+348 files in other folders)
