[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-flatagents"
version = "0.1.0"
description = "Collection of FlatAgents skills"
dependencies = [
    "flatagents[local]>=0.7.7",
    "aisuite",
    "cerebras-cloud-sdk",
    "tiktoken",
]

[project.optional-dependencies]
search-refiner = ["aisuite[mcp]"]
test-writer = ["pytest", "pytest-cov"]
all = ["aisuite[mcp]", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "search_refiner*", "shell_analyzer*", "test_writer*", "codebase_explorer*", "dynamic_agent*", "coding_agent*", "file_writer*", "socratic_teacher*"]
