[project]
name = "flatagent-shell-analyzer"
version = "0.1.0"
description = "FlatAgent skill for running shell commands with validated log analysis"
requires-python = ">=3.10"
dependencies = [
    "flatagents[aisuite]",
    "aisuite",
    "cerebras-cloud-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shell_analyzer"]

[project.scripts]
shell-analyzer = "shell_analyzer.main:main"
